<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="300dp">

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/artwork"
            android:transitionName="pokemonTransition"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:padding="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/imgDescription" />

        <TextView
            android:id="@+id/type1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="32dp"
            android:text="@string/type"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintLeft_toRightOf="@id/artwork"
            app:layout_constraintStart_toEndOf="@id/artwork"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/type2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/type"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/stat_pannel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/artwork"
            app:layout_constraintStart_toEndOf="@id/artwork"
            app:layout_constraintTop_toBottomOf="@id/type1" />

        <TextView
            android:id="@+id/stat_pannel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/statistics"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artwork"
            tools:layout_editor_absoluteX="0dp" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/stat_pannel">

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.33" />

            <TextView
                android:id="@+id/hp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/hp"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/pg_hp"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/hp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:indeterminate="true"
                android:max="255"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/hp" />

            <TextView
                android:id="@+id/attack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/pg_hp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/attack"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hp" />

            <ProgressBar
                android:id="@+id/pg_attack"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/attack"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:indeterminate="true"
                android:max="255"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/attack" />

            <TextView
                android:id="@+id/defence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/attack"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:text="@string/defence"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/attack" />

            <ProgressBar
                android:id="@+id/pg_defence"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/defence"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:indeterminate="true"
                android:max="255"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/defence" />

            <TextView
                android:id="@+id/sp_attack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/defence"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/sp_attack"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/defence" />

            <ProgressBar
                android:id="@+id/pg_sp_attack"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/sp_attack"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:indeterminate="true"
                android:max="255"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/sp_attack" />

            <TextView
                android:id="@+id/sp_defence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/sp_attack"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/sp_defence"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sp_attack" />

            <ProgressBar
                android:id="@+id/pg_sp_defence"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/sp_defence"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:indeterminate="true"
                android:max="255"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/sp_defence" />

            <TextView
                android:id="@+id/speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/sp_defence"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/speed"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sp_defence" />

            <ProgressBar
                android:id="@+id/pg_speed"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/speed"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:indeterminate="true"
                android:max="255"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/speed" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/sprite_pannel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:background="@color/colorPrimary"

            android:gravity="center"
            android:padding="5dp"
            android:text="@string/sprites"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint" />

        <ImageView
            android:id="@+id/sprite"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sprite_pannel"
            android:contentDescription="@string/imgDescription" />

        <ImageView
            android:id="@+id/sprite_shiny"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/sprite_pannel"
            android:contentDescription="@string/imgDescription" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>